--- a/langgraph_agent/notebooks/langgraph_agents.ipynb
+++ b/langgraph_agent/notebooks/langgraph_agents.ipynb
@@ -1469,7 +1469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
